update swagger and other field
